--- a/package.json
+++ b/package.json
@@ -1,31 +1,43 @@
 {
-    "name": "node",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "debug": "nodemon --inspect=0.0.0.0:9229 src/server.js",
-        "start": "npm-run-all -p nodemon browsersync",
-        "nodemon": "nodemon src/server.js",
-        "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public,src/app/views'"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "connect-pg-simple": "^6.1.0",
-        "express": "^4.17.1",
-        "express-session": "^1.17.1",
-        "method-override": "^3.0.0",
-        "multer": "^1.4.2",
-        "nodemailer": "^6.4.6",
-        "nunjucks": "^3.2.0",
-        "pg": "^7.18.2"
-    },
-    "devDependencies": {
-        "browser-sync": "^2.26.7",
-        "nodemon": "^2.0.2",
-        "npm-run-all": "^4.1.5"
-    },
-    "description": ""
+  "name": "node",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "debug": "nodemon --inspect=0.0.0.0:9229 src/server.js",
+    "start": "npm-run-all -p nodemon browsersync",
+    "nodemon": "nodemon src/server.js",
+    "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public,src/app/views'"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/faker": "^4.1.12",
+    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^6.1.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "faker": "^4.1.0",
+    "method-override": "^3.0.0",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.6",
+    "nunjucks": "^3.2.0",
+    "pg": "^7.18.2"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.26.7",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/11vinicius/LauchBase.git"
+  },
+  "bugs": {
+    "url": "https://github.com/11vinicius/LauchBase/issues"
+  },
+  "homepage": "https://github.com/11vinicius/LauchBase#readme",
+  "description": ""
 }
